--- a/main.html
+++ b/main.html
@@ -8,22 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-
-	<form id="loginForm">
-  <h1>Login Form</h1>
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username" placeholder="Username" required>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" placeholder="Password" required>
-  <label for="checkbox">Remember me:</label>
-  <input type="checkbox" id="checkbox" name="remember">
-  
-  <input type="submit" id="submit" value="Submit">
-		<button id='existing'>Login as existing user</button>
+	<form onsubmit="displayAlert(event)">
+  <input name="First Name" placeholder="First Name">
+  <input name="Last Name" placeholder="Last Name">
+  <input name="Phone Number" placeholder="Phone Number">
+  <input name="Email ID" placeholder="Email ID">
+  <input type="submit" value="Submit">
 </form>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+<script>
+function displayAlert(event) {
+  event.preventDefault();
+  var firstName = document.getElementsByName("First Name")[0].value;
+  var lastName = document.getElementsByName("Last Name")[0].value;
+  var phoneNumber = document.getElementsByName("Phone Number")[0].value;
+  var emailId = document.getElementsByName("Email ID")[0].value;
+
+  alert(`First Name: ${firstName}\nLast Name: ${lastName}\nPhone Number: ${phoneNumber}\nEmail ID: ${emailId}`);
+}
+</script>
 </body>
 
 </html>
