--- a/main.html
+++ b/main.html
@@ -3,30 +3,24 @@
 <html>
 
 <head>
+	<meta charset=utf-8 />
+		<title>Return first and last name from a form</title>
+		<style type="text/css">
+			body {margin: 30px;}
+		</style> 
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<form onsubmit="displayAlert(event)">
-  <input name="First Name" placeholder="First Name">
-  <input name="Last Name" placeholder="Last Name">
-  <input name="Phone Number" placeholder="Phone Number">
-  <input name="Email ID" placeholder="Email ID">
-  <input type="submit" value="Submit">
-</form>
-
-<script>
-function displayAlert(event) {
-  event.preventDefault();
-  var firstName = document.getElementsByName("First Name")[0].value;
-  var lastName = document.getElementsByName("Last Name")[0].value;
-  var phoneNumber = document.getElementsByName("Phone Number")[0].value;
-  var emailId = document.getElementsByName("Email ID")[0].value;
-
-  alert(`First Name: ${firstName}\nLast Name: ${lastName}\nPhone Number: ${phoneNumber}\nEmail ID: ${emailId}`);
-}
+	<form id="form1" onsubmit="getFormvalue()">
+		First name: <input type="text" name="fname"><br>
+		Last name: <input type="text" name="lname"><br>
+		<input type="submit" value="Submit">
+	</form>
+	
+    <script type="text/javascript" src="./script.js">
 </script>
+
 </body>
 
 </html>
